--- a/pages/docs/index.mdx
+++ b/pages/docs/index.mdx
@@ -33,7 +33,7 @@ Thank you for using our chatbot designer!
 
 Let us help you with creating your bots :)
 
-[Get started](buildingABot/yourCharacter.md)
+[Get started](buildingABot/yourCharacter/)
 
 
 
